# phantom-fhe

./: .gitignore  BENCHMARKS.md  RECONCILE_AND_BASELINE_RUNBOOK.md  run_mrpc_5090.sh  run_mrpc_sweep_a6000.sh
campaign/: README.md  calib_variance_study.py  precapture_ptref.py  resume.sh
campaign/ppl/: ppl_driver.sh  ppl_eval.py  prepare_ppl.py  resume_capture.py  run_classifier_fhe_all_positions.py  run_ppl.sh
doc/analysis/: ppl_eval_plan.md  precomputed_calib_variance.md
doc/design/: README.md  decoder_layer.md  diagnostics.md  engine_setup.md  fhe_attention_dense.md  llama3_mrpc.md  pytorch_ref.md
include/: attention.h  bootstrap.h  bsgs.h  butterfly.cuh  ckks_engine.h  evalmod.h  evaluate.cuh  linear.h  mlp.h  ntt.cuh  ntt_radix8_tmpl.cuh  plaintext.h  ps.h  rmsnorm.h  secretkey.h  single_chain_plaintext.h  softmax.h
python/: CMakeLists.txt
python/examples/: bootstrap.py
python/llm_project/: BENCHMARKS.md  BOOTSTRAP_TO17_TODO.md  README.md  build_disk_cache.py  build_wq_disk_cache.py  decoder_layer.py  diagnostics.py  engine_setup.py  extract_llama_probe.py  fhe_attention_dense.py  (+22 more)
results/: README.md  mrpc_baseline.csv  mrpc_baseline_final.csv  mrpc_quant_results_summary.md  quant-32bit_auto.csv  quant-64bit_auto.csv
src/: CMakeLists.txt  attention.cu  bootstrap.cu  bsgs.cu  ckks_engine.cu  eval_key_switch.cu  evalmod.cu  evaluate.cu  linear.cu  mlp.cu  ps.cu  rmsnorm.cu  secretkey.cu  single_chain_plaintext.cu  softmax.cu
test/: CMakeLists.txt  bootstrap_test.cu  ckks_engine_test.cu  evalmod_test.cu  hmult_perf.cu  ks_matmul_perf.cu  ntt_perf.cu
(+65 files in other folders)
